examples/test/testpolicy10120.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10120
  namespace: namespace418
spec:
  podSelector:
    matchLabels:
      key47: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value31
          key27: value3
      podSelector:
        matchLabels:
          key18: value45
          key0: value10
